# agriAI

./: .gitignore  SASSL.py  classification.ipynb  classification_SASSL.ipynb  dataset.py  dataset_explore.ipynb  encoder_evals.py  eval.py  model.py  pyproject.toml  record.txt  sanity_check_classifier.ipynb  sassl_cluster_analysis.ipynb  train_SASSL.ipynb  train_autoencoder.ipynb
pseudo-labelling/: classification_datasets.py  confidence_analysis.py  main.py  model_spec.py  s2a.py  sentinel2_swinb_portable.pth
sassl/: classification_SASSL.ipynb  encoder_evals.py  sassl_cluster_analysis.ipynb  train_SASSL.ipynb
satlas/: classification_SASSL.ipynb  classification_datasets.py  classification_satlasSASSL.ipynb  classification_satlas_baseline_12c.ipynb  classification_satlas_baseline_9c.ipynb  comp.ipynb  dataset.py  guy.csv  satlasSASSLeval.ipynb  satlasswin.py  submission_20.csv  submition.ipynb  swinSASSL.py  train_SwinSASSL.ipynb  xgboost.ipynb
satlas/Xgboost_subs/: submission.csv
vote_subs/: guy.csv  submission (1).csv  submission.csv  vote.ipynb
vote_subs/voted_submission/: submission.csv
